--- a/self.html
+++ b/self.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="self.css">
 </head>
 <body>
-    <!-- ONLY FOIR CHECK-->
+    <!-- ONLY FOIR CHECK container-->
     <div class="container">
         <h1>ADITI KANTHARIA</h1>
     </div>
@@ -47,7 +47,25 @@
     </div>
 
     <!--dropdown menu-->
+    <ul class="menu">
+    <li><a href="#">Home</a></li>
+
+    <li class="dropdown">
+        <a href="#">Services</a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Development</a></li>
+            <li><a href="#">SEO</a></li>
+        </ul>
+    </li>
+
+    <li><a href="#">Contact</a></li>
+</ul>
     <!-- Create Website Layout and skeleton -->
+     <header>Header</header>
+<nav>Navbar</nav>
+<section>main content</section>
+<footer> footer</footer>
      <br>
     <!-- loader -->
     <div class="loader">
@@ -61,5 +79,22 @@
         <a href="self.html">Contact</a>
         <a href="self.html">Service</a>
     </div>
+    <br>
+    <!-- NAVBAR (CSS LIST) -->
+<ul class="navbar">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li class="dropdown">
+        <a href="#">Services</a></li>
+    <li><a href="#">Contact</a></li>
+</ul>
+<br>
+<!--tooltip-->
+<center>
+<button class="tooltip">
+   BY ADITI KANTHARIA
+    <span class="tooltip-text">Tooltip Text</span>
+</button>
+</center>
 </body>
 </html>
