--- a/form.html
+++ b/form.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online job aplication</title>
+    <link rel="stylesheet" href="form.css">
 </head>
 <body>
+    <!-- TOP BAR -->
+<div class="top-bar">
+    <span>SiteMap</span>
+    <div class="font-size">
+        <span>A+</span>
+        <span>A</span>
+        <span>A-</span>
+    </div>
+</div>
     <header class="top-header">
-    <div class="logo">Government of Gujarat</div>
+    <!-- <div class="logo">Government of Gujarat</div> -->
     <div class="title">
         <h1>ONLINE JOB APPLICATION SYSTEM</h1>
-        <p>OJAS</p>
+        <p>Government of Gujarat</p>
     </div>
 </header>
+<!-- PAGE TITLE -->
+<div class="page-title">Registration</div>
+
+<!-- NOTE -->
+<div class="note">
+    <span>Note:</span>
+    <ul>
+        <li>Special Characters not allowed &lt;%&gt;(){}+-</li>
+        <li><b>*indicates mandatory field</li>
+    </ul>
+</div>
 <nav class="navbar">
     <a href="#">Home</a>
     <a href="#">Registration</a>
@@ -21,5 +42,77 @@
     <a href="#">Fees</a>
     <a href="#">Call Letter</a>
 </nav>
+<div class="box">
+    <div class="box-title">
+        Personal Details 
+    </div>
+
+    <!-- Row 1 -->
+    <div class="row">
+        <div class="field">
+            <label>Title</label>
+            <select>
+                <option>Mr.</option>
+                <option>Mrs.</option>
+            </select>
+        </div>
+
+        <div class="field">
+            <label>Surname <span>*</span></label>
+            <input type="text">
+        </div>
+
+        <div class="field">
+            <label>First Name <span>*</span></label>
+            <input type="text">
+        </div>
+
+        <div class="field wide">
+            <label>Father/Husband Name</label>
+            <input type="text">
+        </div>
+
+        <div class="field wide">
+            <label>Mother's Name <span>*</span></label>
+            <input type="text">
+        </div>
+    </div>
+
+    <!-- Row 2 -->
+    <div class="row">
+        <div class="field">
+            <label>Gender <span>*</span></label>
+            <input type="radio" name="g1"> Male
+            <input type="radio" name="g1"> Female
+        </div>
+
+        <div class="field">
+            <label>ReSelect Gender <span>*</span></label>
+            <input type="radio" name="g2"> Male
+            <input type="radio" name="g2"> Female
+        </div>
+
+        <div class="field">
+            <label>Date of Birth <span>*</span></label>
+            <input type="text" placeholder="dd/mm/yyyy">
+        </div>
+
+        <div class="field">
+            <label>Marital Status <span>*</span></label>
+            <input type="radio" name="m"> Married
+            <input type="radio" name="m"> Unmarried
+            <input type="radio" name="m"> Separated
+        </div>
+
+        <div class="field">
+            <label>Category <span>*</span></label>
+            <select>
+                <option>Select</option>
+            </select>
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
