form1 chatgpt and form_426 capilot thruogh

--- a/form_426.html
+++ b/form_426.html
@@ -11,14 +11,14 @@
         <!-- Header -->
         <header class="header">
             <div class="header-left">
-                <img src="satyamev.png" alt="Government Logo" class="logo">
+                <img src="s2.jpg" alt="Government Logo" class="logo">
                 <div class="header-text">
                     <h1>ONLINE JOB APPLICATION SYSTEM</h1>
                     <p>Government of Gujarat</p>
                 </div>
             </div>
             <div class="header-right">
-                <img src="assets/ojas-logo.png" alt="OJAS Logo" class="ojas-logo">
+                <img src="o1.jpg" alt="OJAS Logo" class="ojas-logo">
             </div>
         </header>
 
