--- a/18task.html
+++ b/18task.html
@@ -80,7 +80,31 @@ create a anchor tag that show pseudo class like :acitve and :visited
 
 <!--Show different types of display like none, block, inline, inline-block, flex, grid
  (ex. h1 show inline display vs h1 without inline display (without style)) -->
-<h1>5.</h1>
+<h1>5.display none,block,inline,flex,grid,inline-block</h1>
 
+<h1>H1 Block (Default)</h1>
+
+<!-- Inline -->
+<h3 class="inline">H1 Inline</h3>
+<h3 class="inline">H1 Inline 2</h3>
+
+<!-- None -->
+<p class="none">You will not see this</p>
+
+<!-- Inline-block -->
+<span class="ib">Inline-Block 1</span>
+<span class="ib">Inline-Block 2</span>
+
+<!-- Flex -->
+<div class="flex">
+  <div>Flex 1</div>
+  <div>Flex 2</div>
+</div>
+
+<!-- Grid -->
+<div class="grid">
+  <div>Grid 1</div>
+  <div>Grid 2</div>
+</div>
 </body>
 </html>
