copy from palak

--- a/18task.html
+++ b/18task.html
@@ -106,5 +106,22 @@ create a anchor tag that show pseudo class like :acitve and :visited
   <div>Grid 1</div>
   <div>Grid 2</div>
 </div>
+<h1>6....</h1>
+<section class="section">
+
+  <div class="relative">
+    Relative (Parent)
+
+    <p class="absolute">Absolute</p>
+  </div>
+
+  <p class="fixed">Fixed Position</p>
+
+  <p class="sticky">Sticky Position</p>
+
+</section>
+
+<div class="space"></div>
+
 </body>
 </html>
